[package]
name = "cave-cluster"
description = "Kubernetes cluster lifecycle management — Rancher/Gardener/Cluster API replacement. Multi-tenant K8s clusters on bare metal and cloud."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cave-core = { path = "../cave-core" }
cave-auth = { path = "../cave-auth" }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
