[package]
name = "cave-cluster"
description = "Kubernetes cluster lifecycle management — CRUD, node pools, RBAC, multi-tenancy"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cave-core = { path = "../cave-core" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
async-trait = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }
base64 = "0.22"

[dev-dependencies]
tokio = { workspace = true }
