[package]
name = "cave-compliance"
description = "SOC2/ISO27001/GDPR/HIPAA/PCI-DSS compliance tracking and evidence collection"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
