[package]
name = "cave-compliance"
description = "CAVE Compliance — SOC2/ISO27001 compliance management"
description = "SOC2/ISO27001/GDPR/HIPAA/PCI-DSS compliance tracking and evidence collection"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cave-core = { path = "../cave-core" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
