[package]
name = "cave-compliance"
description = "Compliance & audit — CIS Kubernetes Benchmark, SOC2, PCI-DSS, HIPAA"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cave-core = { path = "../cave-core" }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
