[package]
name = "cave-container-scan"
description = "OCI image + IaC + FS + secret + YARA + namespace-confusion scanner — compatible with Trivy"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cave-core = { path = "../cave-core" }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "macros"] }
