[package]
name = "cave-controller-manager"
description = "Kubernetes controller-manager parity scaffold (Deployment, ReplicaSet, StatefulSet, DaemonSet, Job, CronJob, HPA, PDB, EndpointSlice, Service)"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/cave-controller-manager"
readme = "README.md"
rust-version.workspace = true
keywords = ["kubernetes", "controller", "k8s", "scaffold", "runtime"]
categories = ["api-bindings", "command-line-utilities", "development-tools"]
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
cave-kernel = { path = "../cave-kernel" }
toml = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
