[package]
name = "cave-core"
description = "CAVE Unified Runtime — shared types, config, and utilities"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio-postgres = { workspace = true }
config = { workspace = true }
tracing = { workspace = true }
