[package]
name = "cave-cost-alloc"
description = "FinOps showback/chargeback — replaces Kubecost/CloudHealth"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
