[package]
name = "cave-cost"
description = "FinOps & cost tracking — compatible with Kubecost/OpenCost"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cave-core = { path = "../cave-core" }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
