[package]
name = "cave-cri"
version = "0.1.0"
edition = "2021"
description = "Container Runtime Interface — Linux container lifecycle, namespaces, cgroups v2, OCI images"
license = "Apache-2.0"

[dependencies]
cave-kernel = { path = "../cave-kernel" }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
nix = { version = "0.29", features = ["process", "mount", "sched", "signal", "hostname", "fs"] }
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
hex = "0.4"
flate2 = "1"
tar = "0.4"
bytes = "1"
thiserror = "1"
dashmap = "6"
async-trait = "0.1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tempfile = "3"
