[package]
name = "cave-crm"
description = "Sovereign CRM module — function-based reimplementation, Twenty (twentyhq/twenty) upstream"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/cave-crm"
readme = "README.md"
rust-version.workspace = true
keywords = ["crm", "twenty", "sovereign", "reimplementation", "api"]
categories = ["api-bindings", "web-programming", "database-implementations"]
version.workspace = true
edition.workspace = true
license.workspace = true

# Note: Twenty itself is licensed AGPL-3.0. cave-crm is an independent
# function-based reimplementation in Rust (not a derivative work) and
# inherits the workspace Apache-2.0 license. See ADR-145 for context.

[dependencies]
cave-core = { path = "../cave-core" }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
