[package]
name = "cave-crm"
description = "Sovereign CRM — function-based reimplementation, Twenty (twentyhq/twenty) upstream"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/cave-crm"
readme = "README.md"
rust-version.workspace = true
keywords = ["crm", "twenty", "sovereign", "reimplementation", "api"]
categories = ["api-bindings", "web-programming", "database-implementations"]
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cave-core = { path = "../cave-core" }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }
chrono = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
