[package]
name = "cave-crossplane"
description = "Crossplane v2 XRD composition engine — XRDs, compositions, claims, provider abstraction"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
