[package]
name = "cave-crossplane"
description = "Crossplane v2 XRD composition engine — XRDs, compositions, claims, provider abstraction"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cave-core = { path = "../cave-core" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
bytes = { workspace = true }
prometheus-client = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
