[package]
name = "cave-dashboard"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "CAVE Dashboard — Grafana-compatible dashboard and visualization engine"

[dependencies]
axum      = { workspace = true }
tokio     = { workspace = true }
tower     = { workspace = true }
tower-http = { workspace = true }
serde     = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
uuid      = { workspace = true }
chrono    = { workspace = true }
thiserror = { workspace = true }
tracing   = { workspace = true }
reqwest   = { workspace = true }
regex     = { workspace = true }
anyhow    = { workspace = true }
