[package]
name = "cave-dashboard"
description = "Grafana-compatible dashboard engine — replaces Grafana v10"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cave-core = { path = "../cave-core" }
cave-db   = { path = "../cave-db" }

axum        = { workspace = true }
tower       = { workspace = true }
tower-http  = { workspace = true }
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
serde_yaml  = { workspace = true }
tracing     = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }
thiserror   = { workspace = true }
anyhow      = { workspace = true }
reqwest     = { workspace = true }
regex       = { workspace = true }
