[package]
name = "cave-datafusion"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "DataFusion-style logical + execution plans — projection, filter, limit, aggregate"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "1"
