[package]
name = "cave-datafusion"
description = "Sovereign Apache DataFusion query engine — reimplementation, apache/datafusion upstream"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/cave-datafusion"
readme = "README.md"
rust-version.workspace = true
keywords = ["datafusion", "query-engine", "sql", "sovereign", "reimplementation"]
categories = ["database-implementations", "data-structures"]
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cave-core = { path = "../cave-core" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
