[package]
name = "cave-db"
description = "Shared PostgreSQL layer — connection pool, migrations, schema-per-module"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cave-core = { path = "../cave-core" }
deadpool-postgres = { workspace = true }
tokio-postgres = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
