[package]
name = "cave-deploy"
description = "GitOps continuous delivery — replaces ArgoCD + Flux"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cave-core = { path = "../cave-core" }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
cave-auth = { path = "../cave-auth" }
cave-db   = { path = "../cave-db" }
serde_yaml    = { workspace = true }
anyhow        = { workspace = true }
reqwest       = { workspace = true }
kube          = { workspace = true }
k8s-openapi   = { workspace = true }
tower-http    = { workspace = true }
deadpool-postgres = { workspace = true }
tokio-postgres    = { workspace = true }
regex         = { workspace = true }
http          = "1"
