[package]
name = "cave-deploy"
description = "GitOps deployment engine — replaces ArgoCD + Flux"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cave-core = { path = "../cave-core" }
cave-auth = { path = "../cave-auth" }
cave-db = { path = "../cave-db" }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
