[package]
name = "cave-deploy"
description = "GitOps deployment engine — compatible with ArgoCD + Flux"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/cave-deploy"
readme = "README.md"
rust-version.workspace = true
keywords = ["gitops", "deployment", "argocd", "flux", "automation"]
categories = ["command-line-utilities", "development-tools", "network-programming"]
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cave-db = { path = "../cave-db" }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
