[package]
name = "cave-desktop"
description = "CAVE native admin shell — GPUI-based desktop companion to the web portal (ADR-PORTAL-DESKTOP-001)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }

# GPUI native UI runtime — Zed's GPU-accelerated Rust UI framework.
# Not published on crates.io; pulled directly from zed-industries/zed.
# Optional + behind the `gpui-runtime` feature so a workspace `cargo check`
# without --all-features does not pay the GPUI clone+build cost. When this
# feature is off, src/main.rs runs the headless TODO entry point and the
# UI primitives are no-op skeletons. See ADR-PORTAL-DESKTOP-001 for context.
gpui = { git = "https://github.com/zed-industries/zed", branch = "main", optional = true }

[features]
default = []
# Enable to pull GPUI and build the real native shell. Will clone Zed's repo
# (~hundreds of MB) and require platform GPU stack (Metal on macOS,
# Vulkan/X11 on Linux). Off by default to keep workspace builds fast.
gpui-runtime = ["dep:gpui"]
